# pulseaudio-module-murphy-ivi

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README  acinclude.m4  aclocal.m4  bootstrap.sh  build-rpm.sh  configure  configure.ac  obs-export.sh  pulseaudio-module-murphy-ivi.spec.in
augment/: Makefile.am  module-augment-properties.c  module-dir-watch-symdef.h  module-dir-watch.c
combine/: Makefile.am  module-combine-sink.c  module-combine.c  userdata.h
doc/: Doxyfile  Makefile.am  Makefile.rules
doc/lyx/: pulseaudio_policy_enforcement.lyx
doc/murphy-audio/: Makefile.am
doc/murphy-audio/db/: Makefile.am
doc/murphy-audio/lyx/: murphy-audio.lyx  overview.lyx
examples/: xpolicy.conf
fedora/: Makefile  genivi-mir.spec.in  pulseaudio-module-murphy-ivi.spec.in
m4/: docsetup.m4
module-murphy-ivi/: Makefile.am  classify.c  constrain.c  discover.c  extapi.c  fader.c  loopback.c  module-murphy-ivi.c  multiplex.c  murphy-config.c  murphyif.c  node.c  resource.c  router.c  scripting.c  stream-state.c  switch.c  tracker.c  utils.c  volume.c  zone.c
murphy/: Makefile.am  audiomgr.c  audiomgr.h  classify.c  classify.h  config.c  config.h  constrain.c  constrain.h  dbusif.c  dbusif.h  discover.c  discover.h  extapi.c  fader.c  fader.h  list.h  loopback.c  loopback.h  module-murphy-ivi-symdef.h  module-murphy-ivi.c  multiplex.c  multiplex.h  murphy-config.c  murphy-config.h  murphy-ivi.lua  murphyif.c  murphyif.h  node.c  node.h  pulseaudio-murphy-ivi.conf  resource.c  resource.h  router.c  router.h  routerif.h  scripting.c  scripting.h  socketif.c  socketif.h  (+13 more)
packaging/: pulseaudio-module-murphy-ivi.changes  pulseaudio-module-murphy-ivi.spec
src/: Makefile.am  audiomgr.c  audiomgr.h  card-ext.c  card-ext.h  classify.c  classify.h  client-ext.c  client-ext.h  config-file.c  config-file.h  config.c  config.h  context.c  context.h  dbusif.c  dbusif.h  discover.c  discover.h  index-hash.c  index-hash.h  list.h  module-ext.c  module-ext.h  module-genivi-mir-symdef.h  module-genivi-mir.c  module-policy-enforcement-symdef.h  module-policy-enforcement.c  node.c  node.h  policy-group.c  policy-group.h  router.c  router.h  sink-ext.c  sink-ext.h  sink-input-ext.c  sink-input-ext.h  source-ext.c  source-ext.h  (+9 more)
